==> okini3939/Hermit3d_lpc1114/FatFs/mmc.c <==
#include "LPC11xx.h"
#include "diskio.h"

static
void power_on (void)
{
	LPC_GPIO0->DIR |= (1<<2);		/* CS# (P0_2) = output */
	CS_HIGH();

	/* Initialize SPI0 module and attach it to the I/O pad */
	LPC_SYSCON->SYSAHBCLKCTRL |= (1<<11);
	LPC_SYSCON->PRESETCTRL &= ~(1<<0);	/* Set SSP0 reset */
	LPC_SYSCON->PRESETCTRL |= (1<<0);	/* Release SSP0 reset */
	LPC_SYSCON->SSP0CLKDIV = 1;			/* PCLK = sysclk */
  LPC_SSP0->CPSR = SystemCoreClock / 100000;		/* fc=100KHz */
	LPC_SSP0->CR0 = 0x0007;		/* Mode-0, 8-bit */
	LPC_SSP0->CR1 = 0x02;			/* Enable SPI */
	LPC_IOCON->SCK_LOC = 0x02;	/* SCK0 location = PIO0_6 */
	LPC_IOCON->PIO0_6 = 0x02;	/* SCK0 */
	LPC_IOCON->PIO0_9 = 0x01;	/* MOSI0 */
	LPC_IOCON->PIO0_8 = 0x11;	/* MISO0/pull-up */
}

static
BYTE xchg_spi (BYTE d)
{
	LPC_SSP0->DR = d;		/* Start an SPI transaction */
	while (!(LPC_SSP0->SR & (1<<2))) ;	/* Wait for the end of transaction */
	return LPC_SSP0->DR;	/* Return received byte */
}

static
int rcvr_datablock (
	BYTE *buff,			/* Data buffer to store received data block */
	UINT btr			/* Block size (16, 64 or 512) */
)
{
	BYTE token;
	WORD w;
	long tmr = 200000;
	int n;


	do {							/* Wait for data packet in timeout of 200ms */
		token = xchg_spi(0xFF);
	} while ((token == 0xFF) && --tmr);
	if(token != 0xFE) return 0;		/* If not valid data token, retutn with error */

	LPC_SSP0->CR0 = 0x000F;				/* Select 16-bit mode */

	for (n = 0; n < 8; n++)			/* Push 8 frames into pipeline  */
		LPC_SSP0->DR = 0xFFFF;
	btr -= 16;
	while (btr) {					/* Receive the data block into buffer */
		while (!(LPC_SSP0->SR & (1<<2))) ;
		w = LPC_SSP0->DR; LPC_SSP0->DR = 0xFFFF;
		*buff++ = w >> 8; *buff++ = w;
		while (!(LPC_SSP0->SR & (1<<2))) ;
		w = LPC_SSP0->DR; LPC_SSP0->DR = 0xFFFF;
		*buff++ = w >> 8; *buff++ = w;
		btr -= 4;
	}
	for (n = 0; n < 8; n++) {		/* Pop remaining frames from pipeline */
		while (!(LPC_SSP0->SR & (1<<2))) ;
		w = LPC_SSP0->DR;
		*buff++ = w >> 8; *buff++ = w;
	}
	LPC_SSP0->DR = 0xFFFF;				/* Discard CRC */
	while (!(LPC_SSP0->SR & (1<<2))) ;
	LPC_SSP0->DR;

	LPC_SSP0->CR0 = 0x0007;				/* Select 8-bit mode */

	return 1;						/* Return with success */
}

DSTATUS disk_initialize (
	BYTE drv		/* Physical drive nmuber (0) */
)
{
	BYTE n, cmd, ty, ocr[4];
	long tmr;


	if (drv) return STA_NOINIT;			/* Supports only single drive */
	if (Stat & STA_NODISK) return Stat;	/* No card in the socket */

	power_on();							/* Force socket power on */
	for (n = 10; n; n--) xchg_spi(0xFF); /* 80 dummy clocks */

	ty = 0;
	if (send_cmd(CMD0, 0) == 1) {			/* Enter Idle state */
		tmr = 10000;
		if (send_cmd(CMD8, 0x1AA) == 1) {	/* SDv2? */
			for (n = 0; n < 4; n++) ocr[n] = xchg_spi(0xFF);	/* Get trailing return value of R7 resp */
			if (ocr[2] == 0x01 && ocr[3] == 0xAA) {				/* The card can work at vdd range of 2.7-3.6V */
				while (--tmr && send_cmd(ACMD41, 1UL << 30));	/* Wait for leaving idle state (ACMD41 with HCS bit) */
				if (tmr && send_cmd(CMD58, 0) == 0) {			/* Check CCS bit in the OCR */
					for (n = 0; n < 4; n++) ocr[n] = xchg_spi(0xFF);
					ty = (ocr[0] & 0x40) ? CT_SD2 | CT_BLOCK : CT_SD2;	/* SDv2 */
				}
			}
		} else {							/* SDv1 or MMCv3 */
			if (send_cmd(ACMD41, 0) <= 1) {
				ty = CT_SD1; cmd = ACMD41;	/* SDv1 */
			} else {
				ty = CT_MMC; cmd = CMD1;	/* MMCv3 */
			}
			while (tmr && send_cmd(cmd, 0));		/* Wait for leaving idle state */
			if (!tmr || send_cmd(CMD16, 512) != 0)	/* Set R/W block length to 512 */
				ty = 0;
		}
	}
	CardType = ty;
	deselect();

	if (ty) {			/* Initialization succeded */
		Stat &= ~STA_NOINIT;
	} else {			/* Initialization failed */
		Stat |= STA_NOINIT;
	}
  LPC_SSP0->CPSR = SystemCoreClock / 1000000;		/* fc=1MHz */

	return Stat;
}
